src/test/ui/hrtb/hrtb-higher-ranker-supertraits-transitive.stderr
error[E0308]: mismatched types
  --> $DIR/hrtb-higher-ranker-supertraits-transitive.rs:47:5
   |
LL |     want_bar_for_any_ccx(b); //~ ERROR
   |     ^^^^^^^^^^^^^^^^^^^^ one type is more general than the other
   |
   = note: expected type `for<'ccx> Bar<'ccx>`
              found type `Bar<'static>`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
